Finished the note taking app

--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,18 @@
   <meta name="description" content="Task Lister" />
 
   <title>TaskLister</title>
+
+  <style>
+    body {
+      margin: 0;
+      padding: 0;
+    }
+  </style>
 </head>
 
 <body>
   <div id="root"></div>
+  <script src="https://kit.fontawesome.com/9c3cc2a6a3.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
